OnboardingV2Minimal/force-app/main/default/objects/OrgWideEmail__c/OrgWideEmail__c.object-meta.xml
<CustomObject>
    <description>Read-only cache of org-wide email addresses synchronized via Apex so onboarding/Vendor Program setup can reference a valid From address.</description>
    <label>Org Wide Email</label>
    <nameField>
        <label>Org Wide Email Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Org Wide Emails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>