OnboardingV2Minimal/force-app/main/default/objects/OrgWideEmail__c/fields/Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Developer_Name__c</fullName>
    <description>DeveloperName of the org-wide email address.</description>
    <label>Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>