OnboardingV2Minimal/force-app/main/default/objects/OrgWideEmail__c/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <description>Email address value of the org-wide email entry.</description>
    <label>Email Address</label>
    <type>Email</type>
</CustomField>