OnboardingV2Minimal/force-app/main/default/objects/OrgWideEmail__c/fields/OrgWideEmailAddressId__c.field-meta.xml
<CustomField>
    <fullName>OrgWideEmailAddressId__c</fullName>
    <description>OrgWideEmailAddress Id for the source record in Salesforce.</description>
    <label>Org Wide Email Address Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>